fix: restore z-index for bottom-overlay (::after 3, figcaption 4)

--- a/src/assets/scss/theme/_overlay.scss
+++ b/src/assets/scss/theme/_overlay.scss
@@ -507,7 +507,7 @@ figure.overlay img {
       transparent 100%
     );
     pointer-events: none;
-    z-index: 2;
+    z-index: 3;
   }
   > * {
     position: relative;
@@ -519,6 +519,6 @@ figure.overlay img {
   }
   figcaption {
     position: relative;
-    z-index: 3;
+    z-index: 4;
   }
 }
